# crewai_project_example_1

./: README.md  poem.txt  pyproject.toml
src/example_1/: main.py
